# pyplus

./: .gitignore  .py  MANIFEST.in  MakeFile  NOTICE  README-CN.md  README-EN.md  README-PYPI.md  README.md  _runner.py  check_import.py  feature-CN.md  feature.md  pyplus.py  pyproject.toml  requirements-dev.txt  requirements.txt  runner.py  setup.cfg  setup.py  update.toml
.github/: lint.yml  publish-pypi.yml
.github/workflows/: lint.yml  publish-pypi.yml  publish-testpypi.yml  upload-pypi.yml
advancedlib/: _all.py  errors.py  importlib.py  itertools.py  math.py  scinece.py  tkinter.py  turtle.py
conf/: config_help.toml  module_config.toml  update.toml
docs/markdown/en/: README.md  advancedlib.md  colors.md  feature.md  modulelib.md  tools.md
docs/markdown/zh-cn/: README.md  advancedlib.md  database_convert.md  dec.md  feature.md  formula.md  test.md  tools.md
docs/web/en/: docindex.html  err.html  errdoc.html  index.html
docs/web/zh-cn/: docindex.html  err.html  errdoc.html  index.html
line/: __init__.py
pyplus/: __init__.py  __main__.py  line.py  update.toml
pyplus/config/: get_config.toml  update.toml
pyplus/data/config/: update.toml
pyplus/data/docs/web/zh-cn/: docindex.html
pyplus/docs/web/: docindex.html
pyplus/science/: __init__.py  pyscience.py  shapes.py  units.py
pyplus/science/operators/: matical.py
pyplus/science/units/: units.py
pyplus/science/units/operators/: __init__.py
pyplus/tools/: __init__.py  dataList_conversion.py  database_convert.py  dec.py  decorators.py  errors.py  jurisdiction.py  latex.py  moudle.py  permission.py  ptime.py  pydebugger.py  stack.py  tag.py  type.py  update.py  web.py
pyplus/tools/operators/: __init__.py  comparison.py  matical.py
pyplus/tools/variables/: __init__.py  encrypt.py  share.py  tmp.py
scripts/: .gitkeep
src/advancedlib/: _all.py  _no_math.py  _no_science.py  all.py  antigravity.py  errors.py  importlib.py  itertools.py  math.py  os.py  pdb.py  time.py  tkinter.py  turtle.py  types.py
src/advancedlib/operator/: __init__.py  comparison.py  matical.py  sequence.py
src/modulelib/: __init__.py  all_module.py
src/modulelib/pyplus_cmd/: __init__.py
src/pyplus/: __init__.py  __main__.py  command.py  core.py
src/pyplus/advancedlib/: chrdet.py  errors.py  importlib.py  itertools.py  math.py  os.py  pdb.py  tkinter.py
src/pyplus/data/config/: alias.toml  config_help.toml  deprecated.toml  doc_help.toml  module_config.toml  update.toml
src/pyplus/data/docs/markdown/en/: README.md  database_convert.md  dec.md  formula.md  password.md  permission.md  pycppio.md  science.md  stack.md  tag.md  test.md  update.md  variables.md  web.md
src/pyplus/data/docs/markdown/zh-cn/: README.md  colors.md  modulelib.md  password.md  permission.md  pycppio.md  science.md  stack.md  tag.md
src/pyplus/data/docs/web/en/: docindex.html  index.html
src/pyplus/data/docs/web/zh-cn/: docindex.html  err.html  errdoc.html  index.html
src/pyplus/modulelib/: __init__.py  all_module.py
src/pyplus/modulelib/pyplus_cmd/: __init__.py
src/pyplus/plus/: abstract.py  common.py  data.py  decorators.py  json.py  object.py  path.py
src/pyplus/science/: __init__.py  pyscience.py
src/pyplus/science/operators/: comparison.py
src/pyplus/science/units/: __init__.py  shapes.py  unitPer.py  units.py
src/pyplus/tools/: __init__.py  colors.py  dataList_conversion.py  database_convert.py  dec.py  errors.py  formula.py  geohash.py  jurisdiction.py  moudle.py  password.py  permission.py  ptime.py  pycppio.py  pydebugger.py  stack.py  system.py  tag.py  type.py  update.py  web.py
src/pyplus/tools/variables/: __init__.py  share.py  tmp.py
src/pyplus_cmd/: __init__.py
temp/pyplus/: feature-CN.md
temp/pyplus/src/advancedlib/: _all.py  _no_math.py
temp/pyplus/src/advancedlib/operator/: __init__.py  matical.py
temp/pyplus/src/modulelib/: all_module.py
temp/pyplus/src/pyplus/data/config/: update.toml
temp/pyplus/src/pyplus/science/units/: shapes.py
temp/pyplus/src/pyplus/tools/: __init__.py  errors.py  permission.py  tag.py
temp/pyplus/src/pyplus/tools/operators/: __init__.py
tests/: test_cache.py  test_checkversion.py  test_findkey.py  test_lazyimport.py  test_memory.py  test_moudle1.py  test_nonelocal.py  test_output.py  test_timeout.py  test_webbind.py
