[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "python-plus-tools"
version = "2.2.0.dev1"
authors = [{ name = "xystudio", email = "173288240@qq.com" }]
description = "For the expansion of python content, it covers science, debugging and other fields."
readme = { file = "README-PYPI.md", content-type = "text/markdown" }
requires-python = ">=3.8"
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "toml>=0.10",
    "indently-decorators>=1.0,<=1.1",
    "cryptography>=3.4",
    "imgfit>=0.3",
    "colorama>=0.1",
    "deprecated>=1",
    "typing-extensions>=4.10.0",
    "numpy>=1.14",
    "matplotlib>=3.4",
    "torch>=2",
    "pandas>=2",
    "requests>=2.27",
    "sympy==1.13.1",
    "markdown>=3.3.6",
    "numba>=0.55", 
    "tomlconfigurer", #>=0.1",
    "documenter", #>=0.1",
    "backupworkspace==0.1",
    "python-dotenv>=0.19",
]
keywords = ["debug", "science", "pyplus", "tools", "python"]
[project.optional-dependencies]
dev = [ ]
test = ["flake8", "mypy"]
build = ["build", "setuptools", "twine"]
[project.scripts]
pyplus = "pyplus_cmd:main"

[tool.setuptools]
include-package-data = true
[tool.setuptools.package-dir]
advancedlib = "src/advancedlib"
pyplus = "src/pyplus"
modulelib = "src/modulelib"
