[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "python-plus-tools"
version = "3.0.0.dev0"
authors = [{ name = "xystudio", email = "173288240@qq.com" }]
description = "For the expansion of python content, it covers science, debugging and other fields."
readme = { file = "README-PYPI.md", content-type = "text/markdown" }
requires-python = ">=3.8"
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "toml>=0.10",
    "indently-decorators==1.0",
    "cryptography>=3.4",
    "imgfit>=0.3",
    "colorama>=0.1",
    "deprecated>=1",
    "typing-extensions>=4.10.0",
    "numpy>=1.14",
    "matplotlib>=3.4",
    "torch>=2",
    "pandas>=2",
    "requests>=2.27",
    "sympy>=1.8",
    "markdown>=3.3.6",
    "numba>=0.55",
    "tomlconfigurer>=0.2",
    "documenter>=0.1",
    "backupworkspace==0.2.1",
    "python-dotenv>=0.19",
    "pytest>=8.3.5",
    "flake8>=5.0.4",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.14.1",
    "pytest-xdist>=3.6.1",
    "coverage>=7.6.1",
    "codecov>=2.1.13",
    "black>=24.8.0",
    "mypy>=1.14.1",
    "pylint>=3.2.7",
    "pyright>=1.1.403",
    "build>=1.2.2.post1",
    "setuptools>=75.3.2",
    "twine>=6.1.0",
    "uv>=0.7.20",
    "pipenv>=2024.4.1",
    "virtualenv>=20.31.2",
    "django>=4.2.23",
    "flask>=3.0.3",
    "ai-apichat>=0.0.2",
    "auto-upgrade-pip>=0.2.1",
    "linecode>=0.1.3",
    "ace-calc>=0.1.0",
    "jupyterlab>=4.3.8",
    "pygame>=2.6.1",
]
keywords = ["debug", "science", "pyplus", "tools", "python"]
[project.optional-dependencies]
dev = ["sqlmodel>=0.0.4"]
test = ["flake8", "mypy"]
build = ["build", "setuptools", "twine"]
virtualenv = ["uv", "pipenv", "virtualenv"]
studio = ["AI-APIChat","auto-upgrade-pip", "linecode", "imgfit", "ACE-calc"]
web = ["django"] 
other = ["pygame", "jupyterlab"]
[project.scripts]
pyplus = "modulelib.pyplus_cmd:main"

[tool.setuptools]
include-package-data = true
[tool.setuptools.package-dir]
pyplus = "src/pyplus"

[tool.uv.workspace]
members = [
    "my",
]
