[metadata]
name = python-plus-tools
version = 2.1.0rc2
author = xystudio <173288240@qq.com>
description = For the expansion of python content, it covers science, debugging and other fields.
long_description = file: README-PYPI.md
long_description_content_type = text/markdown
license_file = LICENSE
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
keywords =
    debug
    science
    pyplus
    tools
    python

[options]
python_requires = >=3.8
install_requires =
    toml>=0.10
    indently-decorators>=1.0,<=1.1
    cryptography>=3.4
    imgfit>=0.3
    colorama>=0.1
    deprecated>=1
    typing-extensions>=4.10.0
    numpy>=1.14
    matplotlib>=3.4
    torch>=2
    pandas>=2
    requests>=2.27
    sympy==1.13.1
    markdown>=3.3.6
    numba>=0.55
include_package_data = True
package_dir =
    advancedlib = src/advancedlib
    pyplus = src/pyplus
    modulelib = src/modulelib


packages = find:
where = src
exclude =
    tests*
    examples*

[options.extras_require]
dev =
    tomlconfigure>=0.1
    documenter>=0.1
    backupworkspace==0.1
    python-dotenv>=0.19
test =
    flake8
    mypy
build =
    build
    setuptools
    twine

[options.entry_points]
console_scripts =
    pyplus = pyplus_cmd:main
